compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__strings__string_prefix_not_unicode_escape_sequence.snap
---
source: compiler-core/src/erlang/tests/strings.rs
expression: "\npub fn go(x) {\n  let _ = case x {\n    \"\\\\u{9}\" <> rest -> \"test\"\n    \"\\\\u{000009}\" <> rest -> \"test\"\n    \"\\\\u{21}\" <> rest -> \"test\"\n    \"\\\\u{100}\" <> rest -> \"test\"\n    \"\\\\u{1000}\" <> rest -> \"test\"\n    \"\\\\u{1F600}\" <> rest -> \"test\"\n    \"\\\\u{1f600}\" <> rest -> \"test\"\n    \"\\\\u{01F600}\" <> rest -> \"test\"\n    \"\\\\u{01f600}\" <> rest -> \"test\"\n    \"\\\\u{9} \\\\u{000009} \\\\u{21} \\\\u{100} \\\\u{1000} \\\\u{1F600} \\\\u{01F600}\" <> rest -> \"test\"\n    _ -> \"Unknown\"\n  }\n}\n"
---
----- SOURCE CODE

pub fn go(x) {
  let _ = case x {
    "\\u{9}" <> rest -> "test"
    "\\u{000009}" <> rest -> "test"
    "\\u{21}" <> rest -> "test"
    "\\u{100}" <> rest -> "test"
    "\\u{1000}" <> rest -> "test"
    "\\u{1F600}" <> rest -> "test"
    "\\u{1f600}" <> rest -> "test"
    "\\u{01F600}" <> rest -> "test"
    "\\u{01f600}" <> rest -> "test"
    "\\u{9} \\u{000009} \\u{21} \\u{100} \\u{1000} \\u{1F600} \\u{01F600}" <> rest -> "test"
    _ -> "Unknown"
  }
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([go/1]).

-file("project/test/my/mod.gleam", 2).
-spec go(binary()) -> binary().
go(X) ->
    _ = case X of
    <<"\\u{9}"/utf8, Rest/binary>> ->
        <<"test"/utf8>>;

    <<"\\u{000009}"/utf8, Rest@1/binary>> ->
        <<"test"/utf8>>;

    <<"\\u{21}"/utf8, Rest@2/binary>> ->
        <<"test"/utf8>>;

    <<"\\u{100}"/utf8, Rest@3/binary>> ->
        <<"test"/utf8>>;

    <<"\\u{1000}"/utf8, Rest@4/binary>> ->
        <<"test"/utf8>>;

    <<"\\u{1F600}"/utf8, Rest@5/binary>> ->
        <<"test"/utf8>>;

    <<"\\u{1f600}"/utf8, Rest@6/binary>> ->
        <<"test"/utf8>>;

    <<"\\u{01F600}"/utf8, Rest@7/binary>> ->
        <<"test"/utf8>>;

    <<"\\u{01f600}"/utf8, Rest@8/binary>> ->
        <<"test"/utf8>>;

    <<"\\u{9} \\u{000009} \\u{21} \\u{100} \\u{1000} \\u{1F600} \\u{01F600}"/utf8, Rest@9/binary>> ->
        <<"test"/utf8>>;

    _ ->
        <<"Unknown"/utf8>>
end.
